Got a map showing on screen

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue-hack</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfyTH_ElSP4CB2L5xs6szf1W3OdIppbE8"></script>
   </head>
   <body>
     <div id="app"></div>
